# backend/docs/swagger.json
@@ -120,23 +120,25 @@
                         }
                     }
                 }
-            },
-            "delete": {
+            }
+        },
+        "/chats/add": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
                     "Chats"
                 ],
-                "summary": "Remove user from chat",
+                "summary": "Add user to chat",
                 "parameters": [
                     {
-                        "description": "Remove User from Chat data",
+                        "description": "Add User to Chat data",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.ChatUser"
+                            "$ref": "#/definitions/schemas.ChatUserToCreate"
                         }
                     }
                 ],
@@ -159,18 +161,18 @@
                 }
             }
         },
-        "/chats/add": {
-            "post": {
+        "/chats/user": {
+            "delete": {
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
                     "Chats"
                 ],
-                "summary": "Add user to chat",
+                "summary": "Remove user from chat",
                 "parameters": [
                     {
-                        "description": "Add User to Chat data",
+                        "description": "Remove User from Chat data",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -757,23 +759,6 @@
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "schemas.ChatUser": {
-            "type": "object",
-            "properties": {
-                "chat_id": {
-                    "type": "integer"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "from_id": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
                 }
             }
         },
